testdata/invalid/todo-markers.qmd
---
title: "TODO Markers Test"
---

# Test File

TODO: Add more content here

This section needs work. FIXME: Citation needed

## Another Section

XXX: This is a placeholder

HACK: Temporary workaround for the algorithm description
